<resources>
    <string name="app_name">DSP FIR</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="loading">Загрузка…</string>
    <string name="server_not_available">Сервер временно недоступен</string>
    <string name="network_error">Отсутствует подключение к сети</string>
    <string name="double_back_to_exit">Нажмите еще раз для выхода</string>
    <string name="parameters">Параметры</string>
    <string name="charts">Графики</string>
    <string name="nav_drawer_text">Автор: Тярт Никита\naka RznNike</string>
    <string name="first_signal">Первый сигнал</string>
    <string name="second_signal">Второй сигнал</string>
    <string name="sum_signal">Суммарный сигнал</string>
    <string name="impulse_response">Импульсная характеристика</string>
    <string name="filtered_signal">Отфильтрованный сигнал</string>
    <string name="first_signal_with_offset">Первый сигнал со смещением</string>
    <string name="successfull_file_loading">Файл успешно загружен</string>
    <string name="error_in_file_loading">Ошибка чтения файла</string>
    <string name="invalid_input">Проверьте правильность заполнения полей!</string>
    <string name="version">Версия</string>
    <string name="send_email">Отправить письмо</string>
    <string name="dev_email">rznnike@yandex.ru</string>
    <string name="dev_github">https://github.com/RznNike</string>
    <string name="dev_vk">https://vk.com/RznNike</string>
    <string name="dev_4pda">https://4pda.ru/forum/index.php?showuser=3167539</string>
    <string name="dev_telegram">https://t.me/RznNike</string>
    <string name="dev_smartsworld">https://forum.smartsworld.ru/users/rznnike.395/</string>
    <string name="impulse_response_coefficients">Коэффициенты ИХ</string>
    <string name="close">Закрыть</string>
    <string name="unsupported_file_format">Неподдерживаемый формат файла</string>
    <string name="file_choosing_cancelled">Выбор файла отменен</string>
    <string name="sampling_frequency">Частота дискретизации, Гц</string>
    <string name="first_signal_frequency">Частота первого сигнала, Гц</string>
    <string name="second_signal_frequency">Частота второго сигнала, Гц</string>
    <string name="counts_number">Число отсчетов</string>
    <string name="coefficients_source">Источник коэффициентов ИХ</string>
    <string name="default_values">Значения по умолчанию</string>
    <string name="from_file">Из файла</string>
    <string name="charts_draw">Вывод графиков</string>
    <string name="draw_charts">Построить графики</string>
    <string name="callback">Обратная связь:</string>
    <string name="email">email</string>
    <string name="github">github</string>
    <string name="vk">vk</string>
    <string name="_4pda">4pda</string>
    <string name="telegram">telegram</string>
    <string name="smartsworld">smartsworld</string>
</resources>
