<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/textViewNavDrawerHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textColor="@color/colorTextLight"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/textViewNavDrawerHeader"
        app:layout_constraintBottom_toTopOf="@id/textViewNavDrawerText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/textViewNavDrawerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/nav_drawer_text"
        android:textAlignment="center"
        android:textColor="@color/colorTextLight"
        app:layout_constraintBottom_toTopOf="@id/textViewAppVersion"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewAppVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        tools:text="Версия: 1.0.0"
        android:textAlignment="center"
        android:textColor="@color/colorTextLight"
        app:layout_constraintBottom_toTopOf="@id/textViewExternalLinksHeader"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewExternalLinksHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/callback"
        android:textAlignment="center"
        android:textColor="@color/colorTextLight"
        app:layout_constraintBottom_toTopOf="@id/buttonEmail"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEmail"
        style="@style/AccentButton"
        android:background="@drawable/outline_white_bg"
        android:textColor="@color/colorTextLight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:minHeight="35dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@id/buttonVK"
        app:layout_constraintEnd_toStartOf="@id/buttonGithub"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/buttonGithub"
        style="@style/AccentButton"
        android:background="@drawable/outline_white_bg"
        android:textColor="@color/colorTextLight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:minHeight="35dp"
        android:text="@string/github"
        app:layout_constraintBottom_toTopOf="@id/button4PDA"
        app:layout_constraintStart_toEndOf="@id/buttonEmail"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonVK"
        style="@style/AccentButton"
        android:background="@drawable/outline_white_bg"
        android:textColor="@color/colorTextLight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:minHeight="35dp"
        android:text="@string/vk"
        app:layout_constraintBottom_toTopOf="@id/buttonTelegram"
        app:layout_constraintEnd_toStartOf="@id/button4PDA"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button4PDA"
        style="@style/AccentButton"
        android:background="@drawable/outline_white_bg"
        android:textColor="@color/colorTextLight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:minHeight="35dp"
        android:text="@string/_4pda"
        app:layout_constraintBottom_toTopOf="@id/buttonSmartsworld"
        app:layout_constraintStart_toEndOf="@id/buttonVK"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonTelegram"
        style="@style/AccentButton"
        android:background="@drawable/outline_white_bg"
        android:textColor="@color/colorTextLight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:minHeight="35dp"
        android:text="@string/telegram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonSmartsworld"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/buttonSmartsworld"
        style="@style/AccentButton"
        android:background="@drawable/outline_white_bg"
        android:textColor="@color/colorTextLight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:minHeight="35dp"
        android:text="@string/smartsworld"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonTelegram"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
