<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackgroundGray"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:contentInsetStartWithNavigation="0dp"
            app:titleMarginStart="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <TextView
                android:id="@+id/toolbarTitle"
                style="@style/ToolbarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parameters"
                android:textColor="@color/colorTextLight"/>

        </androidx.appcompat.widget.Toolbar>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scrollCardAddition"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorBackground"
        android:fillViewport="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:padding="16dp"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/textViewSamplingFrequencyHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/sampling_frequency"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextSamplingFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/outline_black_bg"
                android:singleLine="true"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewSamplingFrequencyHeader" />

            <TextView
                android:id="@+id/textViewFirstSignalFrequencyHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/first_signal_frequency"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextSamplingFrequency" />

            <EditText
                android:id="@+id/editTextFirstSignalFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/outline_black_bg"
                android:singleLine="true"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewFirstSignalFrequencyHeader" />

            <TextView
                android:id="@+id/textViewSecondSignalFrequencyHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/second_signal_frequency"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextFirstSignalFrequency" />

            <EditText
                android:id="@+id/editTextSecondSignalFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/outline_black_bg"
                android:singleLine="true"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewSecondSignalFrequencyHeader" />

            <TextView
                android:id="@+id/textViewCountsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/counts_number"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextSecondSignalFrequency" />

            <EditText
                android:id="@+id/editTextCounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/outline_black_bg"
                android:singleLine="true"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewCountsHeader" />

            <TextView
                android:id="@+id/textViewCoefficientsSourceHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/coefficients_source"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextCounts" />

            <LinearLayout
                android:id="@+id/textViewCoefficientsSourceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/outline_black_bg"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewCoefficientsSourceHeader">

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButtonSourceDefault"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:checked="true"
                        android:text="@string/default_values" />

                    <RadioButton
                        android:id="@+id/radioButtonSourceFile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/from_file" />

                </RadioGroup>

                <ImageButton
                    android:id="@+id/buttonShowCoefficients"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorTransparent"
                    android:src="@drawable/ic_eye"
                    android:tint="@color/colorAccent"
                    android:padding="8dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/textViewDisplayOptionsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/charts_draw"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewCoefficientsSourceLayout" />

            <LinearLayout
                android:id="@+id/textViewDisplayOptionsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/outline_black_bg"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewDisplayOptionsHeader">

                <CheckBox
                    android:id="@+id/checkBoxDrawFirstSignal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:checked="true"
                    android:text="@string/first_signal" />

                <CheckBox
                    android:id="@+id/checkBoxDrawSecondSignal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:checked="true"
                    android:text="@string/second_signal" />

                <CheckBox
                    android:id="@+id/checkBoxDrawSumSignal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:checked="true"
                    android:text="@string/sum_signal" />

                <CheckBox
                    android:id="@+id/checkBoxDrawImpulseResponse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:checked="true"
                    android:text="@string/impulse_response" />

                <CheckBox
                    android:id="@+id/checkBoxDrawFilteredSignal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:checked="true"
                    android:text="@string/filtered_signal" />

                <CheckBox
                    android:id="@+id/checkBoxDrawFirstSignalWithOffset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:checked="true"
                    android:text="@string/first_signal_with_offset" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/buttonDrawCharts"
        style="@style/AccentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/draw_charts"/>

</LinearLayout>